dhall/tests/type-errors/unit/FunctionApplicationArgumentNotMatch.txt
Type error: Unhandled error: error: Wrong type of function argument
 --> <current file>:1:1
  |
1 | (λ(_ : Natural) → _) True
  |  ^^^^^^^^^^^^^^^^^^^^^^^^ Wrong type of function argument
  |  ^^^^^^^^^^^^^^^^^^ this expects an argument of type: Natural
  |                      ^^^^ but this has type: Bool
  |
